# WEB_HW_13

./: README.md
HW_Web_13_1_emal_verification_FastAPI-main/: main.py  pyproject.toml
HW_Web_13_2_Reset_password_Django-main/: pyproject.toml
HW_Web_13_2_Reset_password_Django-main/quotepages/: manage.py
HW_Web_13_2_Reset_password_Django-main/quotepages/quoteapp/: admin.py  forms.py  models.py  urls.py  views.py
HW_Web_13_2_Reset_password_Django-main/quotepages/quoteapp/migrations/: 0001_initial.py  0002_alter_quote_author.py  0003_author_user_quote_user_tag_user_tag_tag of username.py  0004_alter_author_user_alter_quote_user_alter_tag_user.py
HW_Web_13_2_Reset_password_Django-main/quotepages/quoteapp/static/quoteapp/: style.css
HW_Web_13_2_Reset_password_Django-main/quotepages/quoteapp/templates/quoteapp/: author.html  authors.html  autofill.html  base.html  detail.html  edit_quote.html  index.html  quote.html  quote_list.html  tags.html
HW_Web_13_2_Reset_password_Django-main/quotepages/quoteapp/templatetags/: extract_tags.py
HW_Web_13_2_Reset_password_Django-main/quotepages/quotepages/: asgi.py  settings.py  urls.py  wsgi.py
HW_Web_13_2_Reset_password_Django-main/quotepages/users/: views.py
HW_Web_13_2_Reset_password_Django-main/quotepages/users/migrations/: 0001_initial.py
HW_Web_13_2_Reset_password_Django-main/quotepages/users/templates/users/: login.html  logout.html  password_reset_done.html  profile.html  signup.html
HW_Web_13_2_Reset_password_Django-main/selenium/: authors.json  quotes.json  scrapper.py
(+33 files in other folders)
