[tool.poetry]
name = "hw-13-django"
version = "0.1.0"
description = ""
authors = ["dizir7772 <v.a.artemenko1990@gmail.com>"]
readme = "README.md"
packages = [{include = "hw_10_django"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
psycopg2 = "^2.9.5"
pillow = "^9.4.0"
selenium = "^4.8.3"
django-environ = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
